--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="<%=htmlWebpackPlugin.files.chunks.main.css %>"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    /> -->
   </head>
   <body>
     <div id="root"></div>
