--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
       rel="stylesheet"
       href="style.199eec8885f4eb89c371.css"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    /> -->
   </head>
   <body>
     <div id="root"></div>
-    <script src="main.bd3ac58d36a9e38e9db5.js"></script>
+    <script src="main.2554a71252c912a646f3.js"></script>
   </body>
 </html>
